# Barotropic-Vorticity-Model

./: .gitignore  README.md
src-c/: Operators.cpp  Operators.h  ShallowWaterViewer.py  doubleArray.cpp  doubleArray.h  main.cpp  modelGrid.cpp  modelGrid.h
src-hs/: LICENSE  README.md  barotropic-vorticity.cabal  stack.yaml
src-hs/src/: Lib.hs  Main.hs  Solve.hs  Type.hs
src-hs/test/: Test.hs
