name:                   barotropic-vorticity
version:                0.1.0.0
-- synopsis:
-- description:
homepage:               https://github.com/tmcdonell/barotropic-vorticity#readme
license:                BSD3
license-file:           LICENSE
author:                 Trevor L. McDonell
maintainer:             tmcdonell@cse.unsw.edu.au
copyright:              [2017] Trevor L. McDonell <tmcdonell@cse.unsw.edu.au>
category:               NONE
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >=1.10

flag llvm-cpu
  description:          Enable the LLVM backend for multicore CPUs
  default:              True

flag llvm-ptx
  description:          Enable the LLVM backend for NVIDIA CUDA GPUs
  default:              True

executable barotropic-vorticity
  default-language:     Haskell2010
  hs-source-dirs:       src
  main-is:              Main.hs

  build-depends:
        base                        >= 4.7 && < 5
      , accelerate                  >= 1.0

  ghc-options:
      -O2
      -threaded
      -rtsopts

  if flag(llvm-cpu)
    cpp-options:
        -DACCELERATE_LLVM_NATIVE_BACKEND

    build-depends:
        accelerate-llvm-native      >= 1.0

  if flag(llvm-ptx)
    cpp-options:
        -DACCELERATE_LLVM_PTX_BACKEND

    build-depends:
        accelerate-llvm-ptx         >= 1.0

source-repository head
  type:     git
  location: https://github.com/tmcdonell/barotropic-vorticity

-- vim: nospell
